--- a/.github/workflows/deploy_dag_dbt.yml
+++ b/.github/workflows/deploy_dag_dbt.yml
@@ -1,7 +1,7 @@
 name: Manually drigger DAG and dbt deploy
 
 on:
-  workflow_dispatch:
+  push:
     steps:
       name: DBT Deploy to Astro
       uses: astronomer/deploy-action@v0.9.0
