--- a/.github/workflows/deploy_dag_dbt.yml
+++ b/.github/workflows/deploy_dag_dbt.yml
@@ -1,17 +1,16 @@
 name: Manually drigger DAG and dbt deploy
 
-on:
-  push:
-    steps:
-      name: DBT Deploy to Astro
-      uses: astronomer/deploy-action@v0.9.0
-      with:
-        deployment-id: cm74gkh6q037z01hqgwut2tuu
-        deploy-type: dbt
-        root-folder: dbt/dbtproject
-      name: DAGs/Image Deploy to Astro
-      uses: astronomer/deploy-action@v0.9.0
-      with:
-        deployment-id: cm74gkh6q037z01hqgwut2tuu
-        root-folder: astro-project/
-        parse: true
+on: push
+  steps:
+    name: DBT Deploy to Astro
+    uses: astronomer/deploy-action@v0.9.0
+    with:
+      deployment-id: cm74gkh6q037z01hqgwut2tuu
+      deploy-type: dbt
+      root-folder: dbt/dbtproject
+    name: DAGs/Image Deploy to Astro
+    uses: astronomer/deploy-action@v0.9.0
+    with:
+      deployment-id: cm74gkh6q037z01hqgwut2tuu
+      root-folder: astro-project/
+      parse: true
