--- a/.github/workflows/deploy_dag_dbt.yml
+++ b/.github/workflows/deploy_dag_dbt.yml
@@ -1,16 +1,27 @@
-name: Manually drigger DAG and dbt deploy
+name: Astronomer CI - Deploy DAG and dbt code to Astro
 
-on: push
-  steps:
-    name: DBT Deploy to Astro
-    uses: astronomer/deploy-action@v0.9.0
-    with:
-      deployment-id: cm74gkh6q037z01hqgwut2tuu
-      deploy-type: dbt
-      root-folder: dbt/dbtproject
-    name: DAGs/Image Deploy to Astro
-    uses: astronomer/deploy-action@v0.9.0
-    with:
-      deployment-id: cm74gkh6q037z01hqgwut2tuu
-      root-folder: astro-project/
-      parse: true
+on: 
+  push:
+    branches:
+      - main
+
+env:
+  ## Sets Deployment API key credentials as environment variables
+  ASTRO_API_TOKEN: ${{ secrets.ASTRO_API_TOKEN }}
+  
+  jobs:
+    deploy:
+      runs-on: ubuntu-latest
+      steps:
+      - name: DBT Deploy to Astro
+        uses: astronomer/deploy-action@v0.9.0
+        with:
+          deployment-id: cm74gkh6q037z01hqgwut2tuu
+          deploy-type: dbt
+          root-folder: dbt/dbtproject
+      - name: DAGs/Image Deploy to Astro
+        uses: astronomer/deploy-action@v0.9.0
+        with:
+          deployment-id: cm74gkh6q037z01hqgwut2tuu
+          root-folder: astro-project/
+          parse: true
