--- a/.github/workflows/deploy_dag_dbt.yml
+++ b/.github/workflows/deploy_dag_dbt.yml
@@ -18,7 +18,7 @@ jobs:
       with:
         deployment-id: cm74gkh6q037z01hqgwut2tuu
         deploy-type: dbt
-        root-folder: dbt/dbtproject
+        root-folder: dbt/dbtproject/
     - name: DAGs/Image Deploy to Astro
       uses: astronomer/deploy-action@v0.9.0
       with:
