update workflow for push trigger

--- a/.github/workflows/deploy_dag_dbt.yml
+++ b/.github/workflows/deploy_dag_dbt.yml
@@ -24,4 +24,4 @@ jobs:
       with:
         deployment-id: cm74gkh6q037z01hqgwut2tuu
         root-folder: astro-project/
-        parse: true
+        parse: false
