--- a/.github/workflows/deploy_dag_dbt.yml
+++ b/.github/workflows/deploy_dag_dbt.yml
@@ -6,7 +6,7 @@ on:
       - main
 
 env:
-  ## Sets Deployment API key credentials as environment variables
+  ## Sets Deployment API key credentials as environment variable
   ASTRO_API_TOKEN: ${{ secrets.ASTRO_API_TOKEN }}
   
 jobs:
