--- a/.github/workflows/deploy_dag_dbt.yml
+++ b/.github/workflows/deploy_dag_dbt.yml
@@ -19,6 +19,7 @@ jobs:
         deployment-id: cm60u64ec0lj801ns7rsvuj29
         deploy-type: dbt
         root-folder: dbt/dbtproject/
+        mount-path: /usr/local/airflow/dbt/mytest
     - name: DAGs/Image Deploy to Astro
       uses: astronomer/deploy-action@v0.9.0
       with:
