--- a/dbt/dbtproject/dbt_project.yml
+++ b/dbt/dbtproject/dbt_project.yml
@@ -1,7 +1,7 @@
 # Name your project! Project names should contain only lowercase characters
 # and underscores. A good package name should reflect your organization's
 # name or the intended use of these models
-name: 'dbtproject'
+name: 'dbtproject_test'
 version: '2.0.0'
 config-version: 2
 # These configurations specify where dbt should look for different types of files.
