--- a/astro-project/requirements.txt
+++ b/astro-project/requirements.txt
@@ -2,3 +2,4 @@ pandas==2.1.3
 apache-airflow-providers-snowflake==5.3.0
 astronomer-cosmos==1.6.0
 dbt-snowflake
+astro-run-dag # This package is needed for the astro run command. It will be removed before a deploy
